tutorial/kejtsi_exercise_3/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-traffic
  namespace: backend
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 6379
    - from:
        - podSelector: {}
